--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,21 @@
-<h1>Hi Ernest! How was your order <%= @order.order_id %> at </h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+<h1>
+  Hi Ernest! How was your order <%= @order.order_id %>
+  at <%= @order.delivery_time_erb %>
+  on <%= @order.delivery_date_erb %>
+</h1>
+<div class="">
+  <p>
+    Your feedback will help us improve and design exciting new meals in the future
+  </p>
+  <p>
+    Need help urgently? <a href="#">Send us an email</a> or call us at
+    <a href="#">+65 3163 5335</a>
+  </p>
+</div>
+<div class="">
+
+</div>
+
 
 <pre>
   <%= @order.inspect %>
