Latest update 6 nov

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
   </head>
 
   <body>
-    <%= yield %>
-    
+    <div id="app">
+      <%= yield %>
+    </div>
+
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
