--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -40,10 +40,10 @@
  float: right;
 }
 
-.modal-footer {
+.modal-mask {
   input {
     width: 100%;
-    margin-bottom: 10px;
+    margin: 10px 0;
   }
 }
 
